@@ -6,10 +6,14 @@
 // set_include_path('/home3/seekersr/pear/share/pear' . PATH_SEPARATOR . get_include_path());
 require_once "HTTP/Request.php";
 
-
-function exists_API_DB($db = NULL) {
+function exists_API_DB($db = NULL, $api_params = NULL) {
     if (isset($db)) {
-        $req =& new HTTP_Request("http://calculator.climateequityreference.org/api/?q=data_ver&db=" . $db);
+        $url = $api_params['dev'] ? Constants::api_url(['dev']) : Constants::api_url(['public']) ;
+        $req = new HTTP_Request($url . "?q=data_ver&db=" . $db);
+        if ($api_params['dev']) { 
+            $dev_calc_creds = Constants::dev_calc_creds();
+            $req->setBasicAuth($dev_calc_creds['user'], $dev_calc_creds['pass']); 
+        }
         $req->setMethod(HTTP_REQUEST_METHOD_GET);
         if (!PEAR::isError($req->sendRequest())) {
             return ($req->getResponseCode()==200) ? TRUE : FALSE;
@@ -21,8 +25,13 @@ function exists_API_DB($db = NULL) {
     }
 }
 
-function get_new_API_DB() {
-    $req =& new HTTP_Request("http://calculator.climateequityreference.org/api/?q=new_db");
+function get_new_API_DB($api_params = NULL) {
+    $url = $api_params['dev'] ? Constants::api_url(['dev']) : Constants::api_url(['public']) ;
+    $req =& new HTTP_Request($url ."?q=new_db");
+    if ($api_params['dev']) { 
+        $dev_calc_creds = Constants::dev_calc_creds();
+        $req->setBasicAuth($dev_calc_creds['user'], $dev_calc_creds['pass']); 
+    }
     $req->setMethod(HTTP_REQUEST_METHOD_GET);
     if (!PEAR::isError($req->sendRequest())) {
         $response = (array) json_decode($req->getResponseBody());
@@ -32,10 +41,15 @@ function get_new_API_DB() {
     return $response['db'];
 }
 
-function get_option_list($of_what, $db = NULL) {
-    $req_string = "http://calculator.climateequityreference.org/api/?q=" . $of_what;
+function get_option_list($of_what, $db = NULL, $api_params = NULL) {
+    $url = $api_params['dev'] ? Constants::api_url(['dev']) : Constants::api_url(['public']) ;
+    $req_string = $url . "?q=" . $of_what;
     if ($db) { $req_string .= "&db=" . $db; }
     $req =& new HTTP_Request($req_string);
+    if ($api_params['dev']) { 
+        $dev_calc_creds = Constants::dev_calc_creds();
+        $req->setBasicAuth($dev_calc_creds['user'], $dev_calc_creds['pass']); 
+    }
     $req->setMethod(HTTP_REQUEST_METHOD_GET);
     if (!PEAR::isError($req->sendRequest())) {
         // Note: json_decode returns arrays as StdClass, so have to cast
@@ -46,8 +60,13 @@ function get_option_list($of_what, $db = NULL) {
     return $response;
 }
 
-function get_data($parms, $db = NULL) {
-    $req =& new HTTP_Request("http://calculator.climateequityreference.org/api/");
+function get_data($parms, $db = NULL, $api_params = NULL) {
+    $url = $api_params['dev'] ? Constants::api_url(['dev']) : Constants::api_url(['public']) ;
+    $req =& new HTTP_Request($url);
+    if ($api_params['dev']) { 
+        $dev_calc_creds = Constants::dev_calc_creds();
+        $req->setBasicAuth($dev_calc_creds['user'], $dev_calc_creds['pass']); 
+    }
     $req->setMethod(HTTP_REQUEST_METHOD_POST);
     if ($db) { $req->addPostData('db', $db); }
     foreach ($parms as $key=>$value) {
