@@ -17,4 +17,12 @@ $caveat_fields = array(
           "description"=>"text that appears in brackets after the, for example, \"China unconditional pledge\" text - to be used for example, to distinguish between low and high ends of pledge ranges"),
     array("name"=>"pledge_breakdown_assumptions", "title" => "Pledge Breakdown Assumptions Help Text", "type"=>"textarea", 
           "description"=>"This is the text that will be included to the user when they receive a warning that the gases they chose to display differ from the gases specified in the INDC. If not specified, they will be shown the default assumptions description. You can include HTML markup, including links to external analysis/assumptions, but remember: no single or double quotes in HTML tags!"),
-);
+    array("name"=>"NatlBAUYear1", "title" => "Nationally Submitted BAU values, year 1 (values in Mt CO2e)", "type"=>"bau", 
+          "description"=>"If you provide values here, they will be used to draw an additional line in the country chart. If you cannot provide a breakdown of the total BAU numbers, our own numbers will be used to break down the total. You can provide values for up to four years here, if you provide data for only one year, it will be drawn as a glyph, otherwise with straight line(s) between years."),
+    array("name"=>"NatlBAUYear2", "title" => "Nationally Submitted BAU values, year 2 (values in Mt CO2e)", "type"=>"bau", 
+          "description"=>"If you provide values here, they will be used to draw an additional line in the country chart. If you cannot provide a breakdown of the total BAU numbers, our own numbers will be used to break down the total. You can provide values for up to four years here, if you provide data for only one year, it will be drawn as a glyph, otherwise with straight line(s) between years."),
+    array("name"=>"NatlBAUYear3", "title" => "Nationally Submitted BAU values, year 3 (values in Mt CO2e)", "type"=>"bau", 
+          "description"=>"If you provide values here, they will be used to draw an additional line in the country chart. If you cannot provide a breakdown of the total BAU numbers, our own numbers will be used to break down the total. You can provide values for up to four years here, if you provide data for only one year, it will be drawn as a glyph, otherwise with straight line(s) between years."),
+    array("name"=>"NatlBAUYear4", "title" => "Nationally Submitted BAU values, year 4 (values in Mt CO2e)", "type"=>"bau", 
+          "description"=>"If you provide values here, they will be used to draw an additional line in the country chart. If you cannot provide a breakdown of the total BAU numbers, our own numbers will be used to break down the total. You can provide values for up to four years here, if you provide data for only one year, it will be drawn as a glyph, otherwise with straight line(s) between years."),
+); 
